# robotics

./: .gitignore  Group-10-AIMLR-Comprehensive-Final-Submission.ipynb  requirements.txt
ros2_ws/src/mcl_localization/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/mcl_localization/launch/: mcl.launch.py
ros2_ws/src/mcl_localization/maps/: map.yaml
ros2_ws/src/mcl_localization/mcl_localization/: __init__.py  map_server.py  mcl_node.py
src/: integrated_robot.py
src/deep_learning/: deep_mcl.py
src/localization/: monte_carlo_localization.py
src/mapping/: grid_slam.py
src/planning/: dstar_planner.py
src/utils/: robot_utils.py
tests/: test_deep_mcl.py  test_dstar_planner.py  test_grid_slam.py  test_integrated_robot.py  test_mcl.py  test_mcl.py.bak
visualization/: mcl_visualizer.py
